tests/NormalTests/paczka1/fuzzy1/61364140.err
Error in line 1: TA437SYdP S442 66,4
Error in line 2: TA437SYdP A929 89,8
Error in line 13: TA437SYdP S442 25,9
Error in line 21: FrKD A929 8,7
Error in line 26: 4Yyylca2E68 S442 30,8
Error in line 25: FrKD S596 64,6
Error in line 30: FrKD S442 86,6
Error in line 32: FrKD S596 39,1
Error in line 31: S596 S596 47,3
